cleaning code and deleting some not necessary sht. also add msgservice